--- a/log_app/templates/log_app/make_sharesheet.html
+++ b/log_app/templates/log_app/make_sharesheet.html
@@ -12,19 +12,15 @@
 
 <body>
     <header><div id="header"></div></header>
-  <div class="container-fluid" style="padding-left: 0; padding-right: 0;"> 
-    <div class="row g-0"> 
-        <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
-        <div class="col-8" style="padding-left: 0; padding-right: 0;">
     <div class="container">
         <h1>日誌記録ページ</h1>
         <form id="activityForm" method="POST" action="{% url 'check_sharesheet' %}">
             {% csrf_token %}
             <label for="activity">本日の活動内容</label>
-            <textarea class="textarea_content" id="activity" name="activity" rows="4" required>{{activity}}</textarea>
+            <textarea class="textarea_content" id="activity" name="activity" rows="4" required placeholder="今日の活動を記録してください…">{{activity}}</textarea>
 
             <label for="contact">本日の生徒の様子</label>
-            <textarea class="textarea_content" id="student" name="student" rows="4" required>{{student}}</textarea>
+            <textarea class="textarea_content" id="student" name="student" rows="4" required placeholder="今日の生徒の様子を記録してください…">{{student}}</textarea>
 
             <div class="submit_button">
                 <button class="Button-style" type="submit">送信</button>
@@ -32,8 +28,10 @@
         </form>
         <a type="button" class="btn btn-primary" href="{% url 'caregiver_dashboard'%}">ホームに戻る</a>
     </div>
-</div>
-<div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
-</div>
-</div>
+
+
+<footer>
+    <p>© 2024 Smile Log. All rights reserved.</p>
+    <a href="#">利用規約</a> | <a href="#">プライバシーポリシー</a> | <a href="#">お問い合わせ</a>
+</footer>
 </html>
