--- a/log_app/static/log_app/css/sharesheet.css
+++ b/log_app/static/log_app/css/sharesheet.css
@@ -1,49 +1,97 @@
-/* make_caliculm.css */
-/* コンテナのスタイル */
-.container {
-    max-width: 600px;
-    border-radius: 8px;
-    background-color: #F9FFFF;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-/* タイトルのスタイル */
-.container h1 {
-    text-align: center;
-    color: #333;
-    font-size: 24px;
-    margin-bottom: 20px;
-}
-/* ラベルのスタイル */
-label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: bold;
-    color: #555;
+/* 背景とフォント設定 */
+body {
+    background-color: #f9f9f9;
+    font-family: Arial, sans-serif;
 }
 
+/* メインコンテンツのラッパー */
+.content-wrapper {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+/* コンテナ設定 */
+.container {
+    background-color: #f9f9f9;
+    padding: 30px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+/* フォームの見出し */
+h1 {
+    font-size: 1.8em;
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+/* ラベルのスタイル */
+label {
+    font-weight: bold;
+    margin-top: 10px;
+    display: block;
+}
+
+/* テキストエリアのスタイル */
 .textarea_content {
     width: 100%;
-    margin-bottom: 25px; /* 間隔を広げるためにmargin-bottomを調整 */
-    border: 3px solid #b8b8b8;
-    border-radius: 10px;
-    box-sizing: border-box;
-    font-size: 16px;
-    background-color: #fff;
-    color: #333;
-    height: 200px;
-    resize: none;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #ced4da;
+    margin-bottom: 20px;
+    font-size: 1em;
 }
-.submit_button{
+
+/* 送信ボタンのスタイル */
+.submit_button {
     text-align: center;
 }
+
 .Button-style {
-    font-family: "Modak", cursive;
-    font-size: 20px;
-    display: inline-block;
-    padding: 0.2em 1em 0.1em;
-    color: #ff0066;
-    border: solid 2px #ff0066;
-    border-radius: 5px;
-    background-color: #fff0f8;
+    background-color: #6a5acd; /* ボタンの色 */
+    color: white;
+    padding: 10px 20px;
+    font-size: 1em;
+    border: none;
+    border-radius: 4px;
     cursor: pointer;
-  }
+    transition: background-color 0.3s ease;
+}
+
+.Button-style:hover {
+    background-color: #5942a8; /* ホバー時の色 */
+}
+
+/* ホームに戻るボタン */
+.return-button {
+    background-color: #6a5acd;
+    border: none;
+}
+
+button:hover {
+    transform: translateY(-5px);
+}
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    font-size: 0.8em;
+    padding: 20px;
+}
+footer a {
+    color: #ddd;
+    margin: 0 10px;
+    text-decoration: none;
+}
+footer a:hover {
+    text-decoration: underline;
+}
+.textarea_content::placeholder {
+    color: #a9a9a9; /* 任意の色コードに変更可能 */
+    opacity: 1; /* 必要に応じて透明度を調整 */
+}
