--- a/log_app/templates/log_app/make_caliculm.html
+++ b/log_app/templates/log_app/make_caliculm.html
@@ -34,6 +34,10 @@
 <div style="background-color: rgb(255, 238, 240); padding-left: 0; padding-right: 0;" class="col-2"></div>
 </div>
 </div>
+<footer>
+  <p>© 2024 Smile Log. All rights reserved.</p>
+  <a href="#">利用規約</a> | <a href="#">プライバシーポリシー</a> | <a href="#">お問い合わせ</a>
+</footer>
 </body>
 
 </html>
