--- a/log_app/templates/log_app/check_sharesheet.html
+++ b/log_app/templates/log_app/check_sharesheet.html
@@ -23,6 +23,7 @@
             <textarea class="textarea_content" style="min-height:400px ;" readonly>{{sheet}}</textarea>
             <div class="check_button">
             <input type="hidden" name="sheet" value="{{ sheet }}">
+            <input type="hidden" name="student_info" value="{{ student_info }}">
                 <div class="submit_button">
                     <button class="Button-style">送信する</button>
                 </div>
