デザインの改良

--- a/log_app/templates/log_app/admin_dashboard.html
+++ b/log_app/templates/log_app/admin_dashboard.html
@@ -29,14 +29,14 @@
       </div>
       <div class="card">
           <h2 style="color: #00a513;">👤 保育士管理</h2>
-          <p>保育士の情報を管理します</p>
+          <p>保育士個人の情報を管理します</p>
           <a href="{% url 'caregiver_list' %}">
               <button class="button" style="background-color: #00a513;">保育士管理</button>
           </a>
       </div>
       <div class="card">
           <h2 style="color: #d4d400;">👶 生徒情報管理</h2>
-          <p>生徒の情報を管理します</p>
+          <p>生徒個人の情報を管理します</p>
           <a href="{% url 'students' %}">
               <button class="button" style="background-color: #d4d400;">生徒情報管理</button>
           </a>
