--- a/log_app/templates/log_app/caregiver_dashboard.html
+++ b/log_app/templates/log_app/caregiver_dashboard.html
@@ -27,7 +27,7 @@
             </div>
             <div class="card">
                     <h2 style="color: #00a513;">👤 生徒情報確認</h2>
-                    <p>生徒の情報を確認できます</p>
+                    <p>生徒個人の情報を確認できます</p>
                 <a href="{% url 'caregiver_students' %}">
                     <button class="view-student-info" style="background-color: #00a513;">生徒情報を見る</button>
                 </a>
