--- a/log_app/templates/log_app/caregiver_list.html
+++ b/log_app/templates/log_app/caregiver_list.html
@@ -1,4 +1,17 @@
 {% load static %}
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="../../static/log_app/css/list.css">
+  <script src="{% static 'js/header.js' %}"></script>
+</head>
+
+<body>
+  <header><div id="header"></div></header>
 <h1>保育士一覧</h1>
 <a href="{% url 'create-caregiver' %}">保育士の追加</a>
 <table>
@@ -23,3 +36,4 @@
   {% endfor %}
 </table>
 <a href="{% url 'admin_dashboard' %}">戻る</a>
+</body>
