--- a/log_app/templates/log_app/student_detail.html
+++ b/log_app/templates/log_app/student_detail.html
@@ -25,10 +25,11 @@
     <li><strong>生年月日:</strong> {{ student.birth_date }}</li>
     <li><strong>アレルギー:</strong> {{ student.allergy_info }}</li>
     <li><strong>追記:</strong> {{ student.additional_info }}</li>
+    <li><strong>性格:</strong> {{ student.personality }}</li>
     {% if request.user.role == 'admin' %}
-    <p><a href="{% url 'admin_dashboard' %}">戻る</a></p>
+    <p style="text-align: center;"><a href="{% url 'admin_dashboard' %}">戻る</a></p>
     {% elif request.user.role == 'caregiver' %}
-    <p><a href="{% url 'caregiver_students' %}">戻る</a></p>
+    <p style="text-align: center;"><a href="{% url 'caregiver_students' %}">戻る</a></p>
     {% endif %}
   </ul>
 </div>
